<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- android_app_ui strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="title_string">Settings</string>
	<string name="employees_string">Employees</string>
	<string name="my_recipes_string">My recipes</string>
	<string name="settings_ek3_string">Settings</string>
	<string name="employees_ek1_string">Employees</string>
	<string name="schedule_string">Schedule</string>
	<string name="settings_ek5_string">Settings</string>
	<string name="employees_ek2_string">Employees</string>
	<string name="my_recipes_ek1_string">My recipes</string>
	<string name="settings_ek7_string">Settings</string>
	<string name="employees_ek3_string">Employees</string>
	<string name="schedule_ek1_string">Schedule</string>
	<string name="settings_ek9_string">Settings</string>
	<string name="title_ek1_string">Scheduling</string>
	<string name="employees_ek4_string">Employees</string>
	<string name="schedule_ek2_string">Schedule</string>
	<string name="settings_ek11_string">Settings</string>
	<string name="save_string">Save</string>
	<string name="sun_ek1_string">Sun</string>
	<string name="morning_shift_string">Morning Shift</string>
	<string name="mon_ek1_string">Mon</string>
	<string name="tue_ek1_string">Tue</string>
	<string name="wed_ek1_string">Wed</string>
	<string name="thurs_ek1_string">Thurs</string>
	<string name="fri_ek1_string">Fri</string>
	<string name="sat_ek1_string">Sat</string>
	<string name="evening_shift_string">Evening Shift</string>
	<string name="availability_pattern_string">Availability Pattern</string>
	<string name="full_day_shift_string">Full-DayShift</string>
	<string name="john_smith_string">John Smith</string>
	<string name="phone_number_ek1_string">Phone Number</string>
	<string name="_780_123_4567_string">780-123-4567</string>
	<string name="email_ek1_string">Email</string>
	<string name="johnsmith_gmail_com_string">johnsmith@gmail.com</string>
	<string name="date_of_birth_ek1_string">Date of Birth</string>
	<string name="_08_18_1993_string">08/18/1993</string>
	<string name="smith_string">Smith</string>
	<string name="last_name_string">Last Name</string>
	<string name="john_string">John</string>
	<string name="first_name_string">First Name</string>
	<string name="qualifications_ek1_string">Qualifications</string>
	<string name="choose_string">Choose</string>
	<string name="postal_code_ek1_string">Postal Code</string>
	<string name="t6y6p5_string">T6Y6P5</string>
	<string name="street_address_string">Street Address</string>
	<string name="_32_crescent_way_sw_string">32 Crescent Way SW</string>
	<string name="province_ek1_string">Province</string>
	<string name="ab_string">AB</string>
	<string name="city_ek1_string">City</string>
	<string name="edmonton_string">Edmonton</string>
	<string name="employees_ek5_string">Employees</string>
	<string name="schedule_ek3_string">Schedule</string>
	<string name="settings_ek13_string">Settings</string>
	<string name="save_ek1_string">Save</string>
	<string name="john_smith_ek1_string">John Smith</string>
	<string name="employees_ek6_string">Employees</string>
	<string name="schedule_ek4_string">Schedule</string>
	<string name="settings_ek15_string">Settings</string>
	<string name="edit_string">Edit</string>
	<string name="delete_string">Delete</string>
	<string name="schedule_ek5_string">Availability</string>
	<string name="opening_string">Opening</string>
	<string name="shift_type_string">Shift Type</string>
	<string name="qualifications_ek3_string">Qualifications</string>
	<string name="john_smith_ek2_string">John Smith</string>
	<string name="name_ek3_string">Name</string>
	<string name="aug_18__1993_string">Aug 18, 1993</string>
	<string name="date_of_birth_ek2_string">Date of Birth</string>
	<string name="johnsmith_gmail_com_ek1_string">johnsmith@gmail.com</string>
	<string name="email_ek3_string">Email</string>
	<string name="_780_123_4567_ek1_string">780-123-4567</string>
	<string name="phone_num_string">Phone Num</string>
	<string name="_32_crescent_way_sw_edmonton__ab_t6y6p5_string">32 Crescent Way SWEdmonton, AB T6Y6P5</string>
	<string name="address_ek1_string">Address</string>
	<string name="john_smith_ek3_string">John Smith</string>
	<string name="john_smith_ek4_string">John Smith</string>
	<string name="john_smith_ek5_string">John Smith</string>
	<string name="john_smith_ek6_string">John Smith</string>
	<string name="john_smith_ek7_string">John Smith</string>
	<string name="john_smith_ek8_string">John Smith</string>
	<string name="john_smith_ek9_string">John Smith</string>
	<string name="employees_ek7_string">Employees</string>
	<string name="schedule_ek6_string">Schedule</string>
	<string name="settings_ek17_string">Settings</string>
	<string name="title_ek2_string">Employees</string>
	<string name="text_string">Lets start</string>
	<string name="header_ek3_string">Scheduling shiftsmade easy</string>
	<string name="header_ek4_string">Shift Scheduler</string>
</resources>