<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		android_app_ui
	 *	@date 		1633540868924
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/settings" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_settings_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/_bg__settings_ek2"
					android:background="@drawable/_bg__settings_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="385dp"
					android:layout_height="812dp" />


				<RelativeLayout android:id="@+id/header"
					android:layout_marginTop="50dp"
					android:layout_marginStart="34dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<TextView android:id="@+id/title"
						android:fontFamily="Arial"
						android:textStyle="bold"
						android:textSize="24sp"
						android:textColor="@color/title_color"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="297dp"
						android:layout_height="43dp"
						android:text="@string/title_string"
						 />

				</RelativeLayout>


				<RelativeLayout android:id="@+id/bottom_bar"
					android:layout_marginTop="720dp"
					android:layout_marginStart="20dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View android:id="@+id/bg"
						android:background="@drawable/bg_shape"
						 android:layout_marginStart="-15dp"
						android:layout_marginTop="-12dp"
						android:layout_width="375dp"
						android:layout_height="104dp" />

					<View android:id="@+id/active_state"
						android:background="@drawable/active_state_shape"
						 android:layout_marginStart="7dp"
						android:layout_marginTop="6dp"
						android:layout_width="81dp"
						android:layout_height="51dp" />


					<RelativeLayout android:id="@+id/icon1"
						android:layout_marginTop="2dp"
						android:layout_marginStart="5dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView android:id="@+id/employees"
							android:fontFamily="Nunito"
							android:layout_gravity="center_horizontal|center"
							android:gravity="center"
							android:textSize="12sp"
							android:textColor="@color/_bg__settings_ek2_color"
							android:layout_marginLeft="7dp"
							android:layout_marginTop="34dp"
							android:layout_width="78dp"
							android:layout_height="24dp"
							android:text="@string/employees_string"
							 />


						<RelativeLayout android:id="@+id/idea"
							android:layout_marginTop="10dp"
							android:layout_marginStart="33dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<ImageView android:id="@+id/vector"
								android:src="@drawable/vector"
								android:contentDescription="vector"
								 android:layout_marginStart="1.25dp"
								android:layout_marginTop="1.49dp"
								android:layout_width="17.5dp"
								android:layout_height="17.26dp" />

						</RelativeLayout>

					</RelativeLayout>


					<RelativeLayout android:id="@+id/icon2"
						android:layout_marginTop="6dp"
						android:layout_marginStart="138dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView android:id="@+id/my_recipes"
							android:fontFamily="Nunito"
							android:layout_gravity="center_horizontal|center"
							android:gravity="center"
							android:textSize="12sp"
							android:textColor="@color/title_color"
							android:layout_marginLeft="3dp"
							android:layout_marginTop="30dp"
							android:layout_width="78dp"
							android:layout_height="24dp"
							android:text="@string/my_recipes_string"
							 />


						<RelativeLayout android:id="@+id/todo_list"
							android:layout_marginTop="6dp"
							android:layout_marginStart="29dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<ImageView android:id="@+id/vector_ek1"
								android:src="@drawable/vector_ek1"
								android:contentDescription="vector_ek1"
								 android:layout_marginStart="2.53dp"
								android:layout_marginTop="2.06dp"
								android:layout_width="16.22dp"
								android:layout_height="14.45dp" />

						</RelativeLayout>

					</RelativeLayout>


					<RelativeLayout android:id="@+id/icon4"
						android:layout_marginTop="12dp"
						android:layout_marginStart="264dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<TextView android:id="@+id/settings_ek3"
							android:fontFamily="Nunito"
							android:layout_gravity="center_horizontal|center"
							android:gravity="center"
							android:textSize="12sp"
							android:textColor="@color/title_color"
							android:layout_marginLeft="-2dp"
							android:layout_marginTop="24dp"
							android:layout_width="78dp"
							android:layout_height="24dp"
							android:text="@string/settings_ek3_string"
							 />


						<RelativeLayout android:id="@+id/settings_ek4"
							android:layout_marginTop="0dp"
							android:layout_marginStart="24dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<ImageView android:id="@+id/vector_ek2"
								android:src="@drawable/vector_ek2"
								android:contentDescription="vector_ek2"
								 android:layout_marginStart="1.53dp"
								android:layout_marginTop="1.25dp"
								android:layout_width="16.94dp"
								android:layout_height="17.5dp" />

						</RelativeLayout>

					</RelativeLayout>

					<View android:id="@+id/menu"
						android:background="@drawable/menu_shape"
						 android:alpha="0.8"
						 android:layout_marginStart="106dp"
						android:layout_marginTop="77dp"
						android:layout_width="133dp"
						android:layout_height="5dp" />


					<RelativeLayout android:id="@+id/bottom_bar_ek1"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>

						<View android:id="@+id/bg_ek1"
							android:background="@drawable/bg_ek1_shape"
							 android:layout_marginStart="-15dp"
							android:layout_marginTop="-12dp"
							android:layout_width="375dp"
							android:layout_height="104dp" />

						<View android:id="@+id/white_bg"
							android:background="@drawable/white_bg_shape"
							 android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="345dp"
							android:layout_height="63dp" />

						<View android:id="@+id/active_state_ek1"
							android:background="@drawable/active_state_ek1_shape"
							 android:layout_marginStart="7dp"
							android:layout_marginTop="6dp"
							android:layout_width="81dp"
							android:layout_height="51dp" />


						<RelativeLayout android:id="@+id/icon1_ek1"
							android:layout_marginTop="2dp"
							android:layout_marginStart="5dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<TextView android:id="@+id/employees_ek1"
								android:fontFamily="Arial"
								android:layout_gravity="center_horizontal|center"
								android:gravity="center"
								android:textSize="12sp"
								android:textColor="@color/_bg__settings_ek2_color"
								android:layout_marginLeft="7dp"
								android:layout_marginTop="35dp"
								android:layout_width="78dp"
								android:layout_height="22dp"
								android:text="@string/employees_ek1_string"
								 />

							<ImageView android:id="@+id/employeeicon"
								android:src="@drawable/employeeicon"
								android:contentDescription="employeeicon"
								 android:layout_marginStart="33dp"
								android:layout_marginTop="10dp"
								android:layout_width="20dp"
								android:layout_height="23.33dp" />

						</RelativeLayout>


						<RelativeLayout android:id="@+id/icon2_ek1"
							android:layout_marginTop="6dp"
							android:layout_marginStart="138dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<TextView android:id="@+id/schedule"
								android:fontFamily="Arial"
								android:layout_gravity="center_horizontal|center"
								android:gravity="center"
								android:textSize="12sp"
								android:textColor="@color/title_color"
								android:layout_marginLeft="3dp"
								android:layout_marginTop="31dp"
								android:layout_width="78dp"
								android:layout_height="22dp"
								android:text="@string/schedule_string"
								 />

							<ImageView android:id="@+id/shifticon_2"
								android:src="@drawable/shifticon_2"
								android:contentDescription="shifticon_2"
								 android:layout_marginStart="29dp"
								android:layout_marginTop="8dp"
								android:layout_width="20dp"
								android:layout_height="18dp" />

						</RelativeLayout>


						<RelativeLayout android:id="@+id/icon4_ek1"
							android:layout_marginTop="12dp"
							android:layout_marginStart="264dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<TextView android:id="@+id/settings_ek5"
								android:fontFamily="Arial"
								android:layout_gravity="center_horizontal|center"
								android:gravity="center"
								android:textSize="12sp"
								android:textColor="@color/title_color"
								android:layout_marginLeft="-2dp"
								android:layout_marginTop="25dp"
								android:layout_width="78dp"
								android:layout_height="22dp"
								android:text="@string/settings_ek5_string"
								 />


							<RelativeLayout android:id="@+id/settings_ek6"
								android:layout_marginTop="0dp"
								android:layout_marginStart="24dp"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								>

								<ImageView android:id="@+id/vector_ek3"
									android:src="@drawable/vector_ek3"
									android:contentDescription="vector_ek3"
									 android:layout_marginStart="1.53dp"
									android:layout_marginTop="1.25dp"
									android:layout_width="16.94dp"
									android:layout_height="17.5dp" />

							</RelativeLayout>

						</RelativeLayout>

						<View android:id="@+id/menu_ek1"
							android:background="@drawable/menu_ek1_shape"
							 android:alpha="0.8"
							 android:layout_marginStart="106dp"
							android:layout_marginTop="77dp"
							android:layout_width="133dp"
							android:layout_height="5dp" />

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>




		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>